complete footer and fix minor errors

--- a/index.html
+++ b/index.html
@@ -247,9 +247,37 @@
         <div class="footer-grid">
           <div class="contacts">
             <a href="#" class="logo">Trevland</a>
+            <p>Contact us</p>
+            <p>@shovasatkhira88.com</p>
+            <div class="socials">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-google-plus"></i></a>
+            </div>
           </div>
-          <div class="navs"></div>
-          <div class="subscribe"></div>
+          <div class="navs">
+            <ul class="footer-nav">
+              <li><a class="footer-link" href="#">Services</a></li>
+              <li><a class="footer-link" href="#">About</a></li>
+              <li><a class="footer-link" href="#">Our story</a></li>
+              <li><a class="footer-link" href="#">Benefits</a></li>
+              <li><a class="footer-link" href="#">Branding</a></li>
+            </ul>
+            <ul class="footer-nav">
+              <li><a class="footer-link" href="#">Legal</a></li>
+              <li><a class="footer-link" href="#">Terms & Conditions</a></li>
+              <li><a class="footer-link" href="#">Privacy Policy</a></li>
+              <li><a class="footer-link" href="#">Terms of use</a></li>
+            </ul>
+          </div>
+          <div class="subscribe">
+            <label for="email" class="subscribe-label">Subscribe now</label>
+            <div class="subscribe-form">
+              <input id="email" type="email" placeholder="Email" />
+              <button class="cta">Send</button>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
