--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li><a href="#" class="nav-link">Contact</a></li>
           </ul>
           <button class="cta">Booking Now</button>
+          <button class="closeBtn">&times;</button>
+          <button id="openBtn">
+            <i class="fas fa-bars"></i>
+          </button>
         </nav>
         <div class="hero-text">
           <h1 class="heading">Railtrips To Here, There And Everywhere!</h1>
@@ -281,5 +285,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
